--- a/modules/wiki/skins/LIFO_wiki/document_edit.html
+++ b/modules/wiki/skins/LIFO_wiki/document_edit.html
@@ -91,7 +91,7 @@
 		<!--@end-->
 		
 		<!--// 에디터  -->
-		<div class="editor">
+		<div class="editor mb-2">
 			 {$oDocument->getEditor()}
 		</div>
 
