--- a/modules/wiki/skins/LIFO_wiki/document_pagination.html
+++ b/modules/wiki/skins/LIFO_wiki/document_pagination.html
@@ -1,13 +1,21 @@
 <div class="wikiPagination">
-	<a href="{getUrl('page','','document_srl','','division',$division,'last_division',$last_division,'entry', ($entry ? $entry : ''))}" class="prevEnd">{$lang->first_page}</a> 
-	<!--@if($page_navigation)-->
-	<!--@while($page_no = $page_navigation->getNextPage())-->
-		<!--@if($page == $page_no)-->
-			<strong>{$page_no}</strong> 
-		<!--@else-->
-			<a href="{getUrl('page',$page_no,'document_srl','','division',$division,'last_division',$last_division,'entry','')}">{$page_no}</a>
-		<!--@end-->
-	<!--@end-->
-	<!--@end-->
-	<a href="{getUrl('page',$page_navigation->last_page,'document_srl','','division',$division,'last_division',$last_division,'entry',($entry ? $entry : ''))}" class="nextEnd">{$lang->last_page}</a>
+    <nav class="mt-3">
+        <ul class="justify-content-center pagination">
+            <li class="page-item pagination-prev">
+                <a href="{getUrl('page','','document_srl','','division',$division,'last_division',$last_division,'entry',($entry ? $entry : ''))}" class="page-link ">&laquo;</a>
+            </li>
+            <block loop="$page_no=$page_navigation->getNextPage()">
+                <li cond="$page!=$page_no" class="page-item">
+                    <a class="page-link" href="{getUrl('page',$page_no,'document_srl','','division',$division,'last_division',$last_division,'entry','')}">{$page_no}</a>
+                </li>
+                <li cond="$page==$page_no" class="page-item active">
+                    <a class="page-link" href="{getUrl('page',$page_no,'document_srl','','division',$division,'last_division',$last_division,'entry','')}">{$page_no}</a>
+                </li>
+            </block>
+            <li class="page-item pagination-next">
+                <a href="{getUrl('page',$page_navigation->last_page,'document_srl','','division',$division,'last_division',$last_division,'entry',($entry ? $entry : ''))}" class="page-link">&raquo;</a>
+            </li>
+        </ul>
+    </nav>
 </div>
+
