Upload Wiki Add lang create_first_page

--- a/modules/document/tpl/category_list.html
+++ b/modules/document/tpl/category_list.html
@@ -32,7 +32,7 @@
 	});
 </script>
 
-<section class="x_modal x" id="__category_info" hidden>
+<section class="x_modal x" id="__category_info">
 	<form ruleset="insertCategory" id="fo_category" action="./" method="post" class="x_form x_form-horizontal" style="margin:0">
 		<input type="hidden" name="module" value="document" />
 		<input type="hidden" name="act" value="procDocumentInsertCategory" />
