--- a/modules/wiki/skins/LIFO_wiki/left_side_tree_list.html
+++ b/modules/wiki/skins/LIFO_wiki/left_side_tree_list.html
@@ -1,4 +1,4 @@
-<div id="leftSideTreeList" class="card" style="width: 18rem;">
+<div id="leftSideTreeList" class="card" >
 	<div class="card-header">
 		Table of contents
 	</div>
