--- a/modules/wiki/skins/LIFO_wiki/document_not_found.html
+++ b/modules/wiki/skins/LIFO_wiki/document_not_found.html
@@ -2,10 +2,16 @@
     <div class="wikiRead">
 		<div class="wkReadBody">
 			<div class="">
-				<div class="alert alert-primary">
-					<i class="xi-angle-right"></i> {$oDocument->get('content')}
-				</div>
-
+                <block cond="$oDocument->get('content')">
+                    <div class="alert alert-primary">
+                        <i class="xi-angle-right"></i> {$oDocument->get('content')}
+                    </div>                    
+                </block>
+                <block cond="!$oDocument->get('content')">
+                    <div class="alert alert-success">
+                        {$oDocument->get('first_page_content')}
+                    </div>                    
+                </block>
 				<div class="command">
 					<a class="btn btn-success" href="{getUrl('act','dispWikiEditPage','entry',$oDocument->get('title'), 'document_srl', '')}">{$lang->cmd_create}</a>
 				</div>
