--- a/modules/wiki/skins/LIFO_wiki/message.html
+++ b/modules/wiki/skins/LIFO_wiki/message.html
@@ -1,5 +1,5 @@
-<include target="_header.html" />
-<div class="context_message area p-2 mb-2 col-md-8 col-lg-6 mx-auto">
+<include target="header.html" />
+<div class="context_message p-2 mb-2 col-md-8 col-lg-6 mx-auto">
     <h3>{$message}</h3>
     <div class="form-row">
       	<div class="col">
@@ -10,4 +10,4 @@
         </div>
     </div>
 </div>
-<include target="_footer.html" />
+<include target="footer.html" />
