--- a/modules/wiki/skins/LIFO_wiki/document_edit.html
+++ b/modules/wiki/skins/LIFO_wiki/document_edit.html
@@ -7,22 +7,12 @@
 			$("#alias").val(alias);
 		});
 		
-		$("#wikiHelp").click(function(){ $(this).toggleClass("hide")});
-		
-		$("#toggleWikiHelp").click(function(){
-			$("#wikiHelp").toggleClass("hide");
-			return false;
-		});
-		
 		$("#fo_write").submit(function(event){
 			event.preventDefault();
 			
 			var url = "index.php";
 			var document_srl = {$document_srl ? $document_srl : 'null'};
 			var latest_doc_edit = {$latest_doc_edit ? $latest_doc_edit : 'null'};
-			
-			
-		
 
 			$.getJSON(url
 					, { act: 'procWikiCheckIfDocumentWasUpdated'
@@ -32,6 +22,7 @@
 						if(json.updated)
 						{
 							var confirm_message = '{$lang->confirm_document_override}';
+							
 							if(confirm(confirm_message))
 							{
 								$("#fo_write").unbind('submit').submit();
@@ -72,34 +63,15 @@
 		<div class="form-inline mb-2" >
 			<div class="form-group">
 				<label for="alias">{$lang->write_form_alias} {getFullUrl()}entry/</label>
-				<input type="text" name="alias" id="alias" value="{htmlspecialchars($oDocument->get('alias'))}" class="form-control form-control-sm" />
+				<input type="text" name="alias" id="alias" value="{htmlspecialchars($oDocument->get('alias'))}" class="form-control form-control-sm" readonly/>
 			</div>
 		</div>
-		
-		<!--// 마크다운 문법 설명  -->
-		<!--@if($module_info->markup_type != 'xe_wiki_markup')-->
-		<a href="#" id="toggleWikiHelp">{$lang->wiki_language_help}</a>
-		<div id="wikiHelp" class="hide" title="Click to hide">
-			<!--@if($module_info->markup_type == 'markdown')-->
-				{nl2br($lang->markdown_help)}
-			<!--@elseif($module_info->markup_type == 'googlecode_markup')-->
-				{nl2br($lang->googlecode_markup_help)}
-			<!--@elseif($module_info->markup_type == 'mediawiki_markup')-->
-				{nl2br($lang->mediawiki_markup_help)}
-			<!--@end-->
-		</div>
-		<!--@end-->
 		
 		<!--// 에디터  -->
 		<div class="editor mb-2">
 			 {$oDocument->getEditor()}
 		</div>
 
-
-
-		<!--// <block cond="$module_info->markup_type != 'xe_wiki_markup'">
-			<div id="wikiDocumentPreview"></div>
-		</block> -->
 	
 		<!--// 비로그인시 사용자 정보 입력창  -->
 		<!--@if(!$is_logged)-->
