Edit file_uploader remove uploaded file when submit form

--- a/modules/editor/skins/TOAST UI Editor/editor.html
+++ b/modules/editor/skins/TOAST UI Editor/editor.html
@@ -70,7 +70,7 @@
         editor_language : "{$lang->tui_editor_lang_type}"
     }); 
     editorUploadInit({
-        "editorSequence" : "{$editor_sequence}",
+        "editor_sequence" : "{$editor_sequence}",
         "upload_target_srl" : "{$upload_target_srl}",
         "sessionName" : "{session_name()}",
         "allowedFileSize" : "{$file_config->allowed_filesize}",
