--- a/modules/wiki/skins/LIFO_wiki/document_view.html
+++ b/modules/wiki/skins/LIFO_wiki/document_view.html
@@ -1,7 +1,7 @@
 <include target="header.html" />
     <div class="wikiRead overflow-hidden">
         <div class="row">    
-            <div class="wkReadBody mb-2 markdown-body col">
+            <div class="wkReadBody mb-2 col">
                 <!--@if($oDocument->isSecret() && !$oDocument->isGranted())-->
                     <form action="./" method="get" ruleset="input_password" class="secretMessage">
                         <input type="hidden" name="act" value="procWikiVerificationPassword" />
@@ -24,7 +24,7 @@
                     <!--@if($history)-->
                         {$history->content}
                     <!--@else-->
-                        <div class="xe_content">                    
+                        <div class="xe_content markdown-body">                    
                             {$oDocument->variables[content]}
                         </div>
                         <!--// {$oDocument->getContent()} -->
