add mid value in input form

--- a/modules/editor/skins/TOAST UI Editor/uploader_table.html
+++ b/modules/editor/skins/TOAST UI Editor/uploader_table.html
@@ -6,6 +6,8 @@
             <input type="file" id="Filedata" name="Filedata" class="tui-input-file" data-editor-sequence="{$editor_sequence}" data-auto-upload="true">
             <input type="hidden" name="editor_sequence" value="{$editor_sequence}">
             <input type="hidden" name="upload_target_srl" value="{$upload_target_srl}">
+            <input type="hidden" name="file_list_area_id" value="uploaded_file_list_{$editor_sequence}">
+            <input type="hidden" name="mid" value="{$mid}">
         </label>
     </div>
 </div>
