--- a/modules/editor/skins/TOAST_UI_Editor/editor.html
+++ b/modules/editor/skins/TOAST_UI_Editor/editor.html
@@ -13,6 +13,9 @@
 <load target="bower_components/tui-editor/dist/tui-editor-Editor.js"/>
 <load target="bower_components/tui-editor/dist/tui-editor-extChart.js"/>
 <load target="bower_components/tui-editor/dist/tui-editor-extUML.js"/>
+<load target="bower_components/tui-editor/dist/tui-editor-extTable.js"/>
+<load target="bower_components/tui-editor/dist/tui-editor-extYoutube.js"/>
+
 
 <load target="bower_components/codemirror/lib/codemirror.css"/>
 <load target="bower_components/highlightjs/styles/github.css"/>
